HEADER css in this change i fixed the header to be more centered with align items and justify content.

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,9 +1,16 @@
 .header  {
+  padding: 8px;
+  display: flex;
+  align-items: center;
   font-family: monospace;
   background: papayawhip;
+  justify-content: space-between;
 }
 
 .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
@@ -12,9 +19,12 @@
 }
 
 ul {
+  display: flex;
   /* this removes the dots on the list items*/
   list-style-type: none;
-}
+  margin: 0;
+  padding: 0;
+  gap: 8px;
 
 a {
   font-size: 22px;
